--- a/main.css
+++ b/main.css
@@ -45,8 +45,7 @@ body{
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
-  color: #fff;
-  background-color: #007bff;
+  color: #007bff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -82,4 +81,5 @@ body{
   background-color: #007bff;
   color: #fff;
 }
+
 
